# fulltext-index

./: .gitignore  README.md  pyproject.toml
data/: cranfield-data-list.json  index.json  stats.json
notebooks/: 01.ipynb  02.ipynb
notebooks/.ipynb_checkpoints/: 01-checkpoint.ipynb  explore-checkpoint.ipynb
src/: BooleanRetrieval.py  InvertedIndex.py  analyzer.py  inverted_index.py  main.py  query_parser.py  read.py  tokenizer.py  utils.py
