[project]
name = "jupyter"
version = "0.1.0"
description = ""
authors = [
    {name = "Dominik Glätzle", email = "dominik@glaetzle.io"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab (>=4.3.6,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
nbval = { version = "^0.11.0", python = "<4.0" }
nbqa = "^1.9.1"
notebook = "^7.3.3"
